# wust_vision

./: .clangd  CMakeLists.txt  README.md  dandao.py  format.sh  run.sh  test.html  video.py  web.py
config/: camera_info.yaml  config_openvino.yaml  config_trt.yaml  guard_openvino.sh  guard_trt.sh
include/: wust_vision.hpp  wust_vision_openvino.hpp  wust_vision_trt.hpp  wust_visionx.hpp
include/common/: ThreadPool.h  ThreadSafeQueue.hpp  angles.h  calculation.hpp  common.hpp  gobal.hpp  logger.hpp  matplottools.hpp  tf.hpp  tools.hpp  toolsgobal.hpp  utils.hpp
include/control/: armor_solver.hpp  manual_compensator.hpp  mpc.hpp  rune_solver.hpp  trajectory_compensator.hpp
include/detect/: armor_pose_estimator.hpp  ba_solver.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  mono_measure_tool.hpp  openvino.hpp  pnp_solver.hpp  rune_detector.hpp  trt.hpp
include/driver/: crc8_crc16.hpp  hik.hpp  image_capturer.hpp  labeler.hpp  packet_typedef.hpp  recorder.hpp  serial.hpp  serial_type.hpp  sharetype.hpp  video_player.hpp
include/impl/: cast.hpp  fast_tf.hpp  joint.hpp  joint_collection.hpp  link.hpp  tf.hpp
include/tracker/: curve_fitter.hpp  extended_kalman_filter.hpp  motion_model.hpp  motion_modela.hpp  motion_modelr.hpp  tracker.hpp
include/type/: image.hpp  type.hpp
model/: opt-1208-001.engine
src/: wust_vision.cpp  wust_vision_openvino.cpp  wust_vision_trt.cpp  wust_visionx.cpp
src/common/: calculation.cpp  gobal.cpp  matplottools.cpp  tools.cpp  toolsgobal.cpp  utils.cpp
src/control/: armor_solver.cpp  manual_compensator.cpp  rune_solver.cpp  trajectory_compensator.cpp
src/detect/: armor_pose_estimator.cpp  ba_solver.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  mono_measure_tool.cpp  openvino.cpp  pnp_solver.cpp  rune_detector.cpp  trt.cpp
src/driver/: crc8_crc16.cpp  hik.cpp  image_capturer.cpp  labeler.cpp  recorder.cpp  serial.cpp  video_player.cpp
src/tracker/: curve_fitter.cpp  extended_kalman_filter.cpp  tracker.cpp
templates/: index.html
web/: index.html
